Add mileage to Vehicle

--- a/app/views/vehicles/_vehicle.html.erb
+++ b/app/views/vehicles/_vehicle.html.erb
@@ -8,6 +8,9 @@
   <%= vehicle.model %>
 </td>
 <td>
+  <%= vehicle.mileage %>
+</td>
+<td>
   <% if vehicle.currently_owned? %>
     <%=t :yes %>
   <% else %>
