--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -4,6 +4,7 @@
     <th><%=t "vehicles.year" %></th>
     <th><%=t "vehicles.make" %></th>
     <th><%=t "vehicles.model" %></th>
+    <th><%=t "vehicles.mileage" %></th>
     <th><%=t "vehicles.current" %>?</th>
   </thead>
   <tbody>
