--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -1,14 +1,23 @@
 <h1><%=t "vehicles.your_vehicles" %></h1>
-<table>
+
+<div>
+  <%= link_to "Add a new vehicle", new_vehicle_path %>
+</div>
+
+<table class="table-minimal">
   <thead>
-    <th><%=t "vehicles.year" %></th>
-    <th><%=t "vehicles.make" %></th>
-    <th><%=t "vehicles.model" %></th>
-    <th><%=t "vehicles.mileage" %></th>
-    <th><%=t "vehicles.current" %>?</th>
+    <tr>
+      <th><%=t "vehicles.year" %></th>
+      <th><%=t "vehicles.make" %></th>
+      <th><%=t "vehicles.model" %></th>
+      <th><%=t "vehicles.mileage" %></th>
+      <th><%=t "vehicles.current" %>?</th>
+    </tr>
   </thead>
   <tbody>
-    <%= render @vehicles %>
+    <tr>
+      <%= render @vehicles %>
+    </tr>
   </tbody>
 </table>
 
