--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,15 @@
     <div class="container container-app">
       <%= render "flashes" -%>
 
+      <% if signed_in? %>
+        <div>
+          <p>
+            Sup, <%= current_user.email %>?
+            <%= link_to "Sign out", sign_out_path, method: :delete %>
+          </p>
+        </div>
+      <% end %>
+
       <%= yield %>
     </div>
 
