Added in the missing VIN field

--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -2,6 +2,7 @@
   <%= form.input :year %>
   <%= form.input :make %>
   <%= form.input :model %>
+  <%= form.input :vin, label: "VIN" %>
   <%= form.input :mileage %>
   <%= form.input :currently_owned, as: :boolean %>
 
