Implement editing for Vehicles

--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -8,5 +8,5 @@
 
   <%= form.input :owner_id, as: :hidden %>
 
-  <%= form.button :submit, "Create" %>
+  <%= form.button :submit, translate("save") %>
 <% end %>
