Implement deletion for Vehicles

--- a/app/views/vehicles/_vehicle.html.erb
+++ b/app/views/vehicles/_vehicle.html.erb
@@ -20,5 +20,6 @@
   </td>
   <td>
     <%= link_to t(:edit), edit_vehicle_path(vehicle.id) %>
+    <%= link_to t(:delete), vehicle_path(vehicle.id), method: :delete %> 
   </td>
 </tr>
