Throw a comma in those mileage #'s

--- a/app/views/vehicles/_vehicle.html.erb
+++ b/app/views/vehicles/_vehicle.html.erb
@@ -9,7 +9,7 @@
     <%= vehicle.model %>
   </td>
   <td>
-    <%= vehicle.mileage %>
+    <%= number_with_delimiter vehicle.mileage %>
   </td>
   <td>
     <% if vehicle.currently_owned? %>
