Add purchase_date and sale_date to Vehicles
- sale_date must be later than the purchase_date

--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -4,7 +4,10 @@
   <%= form.input :model %>
   <%= form.input :vin, label: "VIN" %>
   <%= form.input :mileage %>
+
   <%= form.input :currently_owned, as: :boolean %>
+  <%= form.input :purchase_date, as: :date, html5: true %>
+  <%= form.input :sale_date, as: :date, html5: true %>
 
   <%= form.input :owner_id, as: :hidden %>
 
